[package]
name = "anchor-comp"
version = "0.2.3"
description = "Wrapper on MangoMarketsV3 / SplGovernanceV2 (non anchor)"
edition = "2021"
authors = ["alexcamill@gmail.com UXDProtocol::Acammm"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_comp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["development"] # `anchor build -- --no-default-features --features production` to override
production = []
development = []

[dependencies]
solana-program = ">=1.9.0"
anchor-lang = "0.24.2"
mango = { tag = "v3.4.6", git = "https://github.com/blockworks-foundation/mango-v3", features = ["no-entrypoint"] }
# Follows mango
serum_dex = { rev = "7f55a5ef5f7937b74381a3124021a261cd7d7283", git = "https://github.com/blockworks-foundation/serum-dex.git", default-features=false, features = ["no-entrypoint", "program"] }
spl-governance = { version = "2.2.4", features = ["no-entrypoint"] }
