[package]
name = "anchor-comp"
version = "0.3.0"
description = "Wrapper on SplGovernanceV3 (non anchor)"
edition = "2021"
authors = ["alexcamill@gmail.com UXDProtocol::Acammm"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_comp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["development"] # `anchor build -- --no-default-features --features production` to override
production = []
development = []

[dependencies]
# follows spl-governance
solana-program = "1.14.6"

# latest version of anchor to match solana package
anchor-lang = { git = "https://github.com/coral-xyz/anchor" }

spl-governance = { tag = "governance-v3.1.0", git = "https://github.com/solana-labs/solana-program-library", features = ["no-entrypoint"] }
